# EasyFEA

./: .gitattributes  .gitignore  .readthedocs.yaml  AUTHORS.md  Affichage.py  CHANGELOG.md  CHANGELOG.txt  CITATION.md  CONTRIBUTING.md  CREDITS.md  Convergence 2D.py  Etude2D.py  Etude3D.py  EtudeCisaillement.py  Etude_Cisaillement.py  LICENSE  LICENSE.txt  MANIFEST.in  README  README.md  class_Element.py  class_Materiau.py  class_Mesh.py  class_ModelGmsh.py  class_Noeud.py  class_Simu.py  class_TicTac.py  pyproject.toml  repmat.py  setup.cfg  setup.py
.github/workflows/: ci.yaml  mypy.yaml  tests.yaml
EasyFEA/: BoundaryCondition.py  CalcNumba.py  DIC_Analysis.py  Display.py  Folder.py  Gauss.py  Geoms.py  Gmsh_Interface.py  GroupElems.py  Materials.py  Mesh.py  Models.py  Paraview_Interface.py  PyVista_Interface.py  Simulations.py  Solvers.py  TicTac.py  __about__.py  __init__.py
EasyFEA/FEM/: __init__.py  _boundary_conditions.py  _field.py  _forms.py  _gauss.py  _group_elem.py  _linalg.py  _mesh.py  _mesher.py  _utils.py
EasyFEA/Geoms/: __init__.py  _circle.py  _contour.py  _domain.py  _geom.py  _line.py  _points.py  _utils.py
EasyFEA/Models/: __init__.py  _phasefield.py  _thermal.py  _utils.py  _weakforms.py
EasyFEA/Simulations/: Solvers.py  __init__.py  _beam.py  _dic.py  _elastic.py  _hyperelastic.py  _multibody.py  _phasefield.py  _simu.py  _thermal.py  _utils.py  _weakforms.py
EasyFEA/Utilities/: Display.py  Folder.py  GLTF.py  Matplotlib.py  MeshIO.py  Numba.py  Paraview.py  PyVista.py  Terminal.py  USD.py  Vizir.py  __init__.py  _cache.py  _mpi.py  _observers.py  _params.py  _requires.py  _tic.py  _types.py
EasyFEA/fem/: __init__.py  _boundary_conditions.py  _field.py  _forms.py  _gauss.py  _gmsh.py  _gmsh_interface.py  _group_elem.py  _group_elems.py  _linalg.py  _mesh.py  _mesher.py  _utils.py
EasyFEA/geoms/: __init__.py  _circle.py  _contour.py  _domain.py  _geom.py  _line.py  _points.py  _utils.py
EasyFEA/materials/: __init__.py  _beam.py  _elastic.py  _hyperelastic.py  _hyperelastic_laws.py  _linear_elastic.py  _linear_elastic_laws.py  _phasefield.py  _thermal.py  _utils.py
EasyFEA/models/: __init__.py  _beam.py  _field.py  _hyperelastic.py  _hyperelastic_laws.py  _linear_elastic_laws.py  _params.py  _phasefield.py  _thermal.py  _utils.py  _weak_form_manager.py  _weak_forms.py
EasyFEA/simulations/: Solvers.py  __init__.py  _beam.py  _dic.py  _elastic.py  _hyperelastic.py  _phasefield.py  _simu.py  _thermal.py  _utils.py  _weak_form.py  _weak_forms.py
EasyFEA/utilities/: Display.py  Folder.py  MeshIO.py  Numba.py  Numba_Interface.py  Paraview.py  Paraview_Interface.py  PyVista.py  PyVista_Interface.py  Vizir.py  __init__.py  _linalg.py  _observers.py  _params.py  _tic.py  _types.py  meshio_Interface.py
PythonEF/: Affichage.py  BoundaryCondition.py  CalcNumba.py  Dossier.py  Folder.py  Gauss.py  Geom.py  GroupElem.py  Interface_Gmsh.py  Interface_Solveurs.py  Materials.py  Materiau.py  Mesh.py  PhaseFieldSimulation.py  PostTraitement.py  Simu.py  Simulations.py  TicTac.py  __init__.py  setup.py
PythonEF/cythonScripts/: CalcCython.c  CalcCython.cp310-win_amd64.pyd  CalcCython.html  CalcCython.pyx  setup.py
_codes/: Benchmark plaque trouée.py  Calcul energie pour plaque trouée.py  Convergence 2D.py  Etude2D.py  Etude3D.py  Etude_Cisaillement.py  Plaque_trouée.py  PlateWithHole_Benchmark.py  PlateWithHole_Chargement.py  PlateWithHole_Dimension.py  PlateWithHole_FCBA.py  PlateWithHole_Fc_Gc.py  brouillon.py  gmsh_test.py  tessssttt.py  test.py  testMatrices.py  test_numba.py
_codes/Etudes/: Convergence 2D.py  Etude2D.py  Etude3D.py  test_numba.py
_codes/Phasefield/: PlateWithHole_Benchmark.py  PlateWithHole_Calc Energie.py  PlateWithHole_Chargement.py  PlateWithHole_Dimension.py  PlateWithHole_FCBA.py  PlateWithHole_Fc_Gc.py  PlateWithHole_PostTraitement.py  Shear_Tension_Benchmark.py
_tests/: GroupElem_test.py  InterfaceGmsh_test.py  Materiau_test.py  Mesh_test.py  Simu_test.py
classes/: Affichage.py  BoundaryCondition.py  BoundaryConditions.py  CalcNumba.py  Dossier.py  Element.py  Gauss.py  Geom.py  GroupElem.py  Interface_Gmsh.py  Interface_Solveurs.py  Materials.py  Materiau.py  Mesh.py  ModelGmsh.py  Paraview.py  PostTraitement.py  Simu.py  TicTac.py  __init__.py
codes/: gmsh_test.py  mpiTest.py  test_numba.py
codes/Beam/: Beam1.py  Beam2.py  Beam3.py  Beam4.py  Beam5.py
codes/Beams/: Beam1.py  Beam2.py  Beam3.py  Beam4.py
codes/Contact/: Contact1.py  Contact2.py  Contact3.py
codes/Dynamic/: Dyna1.py  Dyna2.py  Modal1.py  Modal2.py
codes/Elasticity/: Contact1.py  Elas1.py  Elas2.py  Elas3.py  Elas4.py  HyperElasticity.py  PlateWithHole.py  PressurizedTube.py
codes/Etudes/: Beam.py  Convergence 2D.py  Displacement.py  Dynamics.py  Elasticity.py  Etude2D.py  Etude3D.py  Homogenization.py  LinearElasticity.py  MeshConvergence.py  Ondes.py  OptimMesh.py  PropaOndes.py  Thermal.py  Waves.py  gmsh_test.py
codes/FCBA/: Compression_FCBA.py  Compression_Laura.py  Functions.py  Grid Gc.py  Grid.py  Identification Gc.py  Samples.py  Simu_Elas.py  Stats.py  (+11 more)
docs/: .gitignore  begin.md  begin.rst  conf.py  easyfea.rst  howto.rst  index.md  index.rst  install.rst  links.rst  requirements.txt
examples/: HelloWorld.py  README.rst  __init__.py
installation/: Installation.txt  install pip.txt  setup.py  site.cfg  umfpack.txt  utilisation conda.txt
modules/: Affichage.py  AnalyseDic.py  BoundaryCondition.py  CalcNumba.py  DIC_Analysis.py  Display.py  Folder.py  Gauss.py  Geom.py  Geoms.py  GmshInterface.py  Gmsh_Interface.py  GroupElem.py  GroupElems.py  Interface_Gmsh.py  Interface_Solvers.py  Interface_Solveurs.py  Materials.py  Mesh.py  Observers.py  PostProcessing.py  PostTraitement.py  PyVista_Interface.py  Simulations.py  Solvers.py  SolversInterface.py  TicTac.py  __init__.py
results/: solution.vtu
tests/: Geom_test.py  Geoms_test.py  Gmsh_Interface_test.py  GroupElem_test.py  GroupElems_test.py  HyperElastic_test.py  InterfaceGmsh_test.py  Materials_test.py  Materiau_test.py  Mesh_test.py  Simu_test.py  __init__.py
(+454 files in other folders)
