[metadata]
name = PythonEF
version = 1.0.0
author = Matthieu Noel

[options]
packages = find:
include_package_data = True # lecture dans MANIFEST.in -> include folder/*.extension


# Porcedure suivit à travers : https://www.youtube.com/watch?v=JkeNVaiUq_c
# C'est quoi un package python ? -> https://pythongeeks.org/python-packages/